<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultado"
        android:background="@color/background_floating_material_dark"
        android:textColor="#fff"
        android:textSize="50px"
        android:layout_marginTop="185px"
        android:text="@string/resultado"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomeDoUsuarioResultado"
        android:background="@color/background_floating_material_dark"
        android:textColor="#fff"
        android:textSize="50px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acertos"
        android:background="@color/button_material_light"
        android:textColor="@color/background_floating_material_dark"
        android:textSize="30px"
        android:layout_marginTop="225px"
        android:text="@string/acertos"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalAcertos"
        android:background="@color/button_material_light"
        android:textColor="@color/background_floating_material_dark"
        android:textSize="30px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acertos2"
        android:background="@color/button_material_light"
        android:textColor="@color/background_floating_material_dark"
        android:textSize="30px"
        android:text="@string/acertos2"/>

</LinearLayout>